tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_4__contextual_unification_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let o: [{ x : Int }] = [{ x = "Hi" }]
// Expected error:            ^^^^ Expected Int
// Instead of:          ^^^^^^^^^^^ Expected [{ x : Int }]

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_4/contextual_unification_4.kk:1:31
  │
1 │ let o: [{ x : Int }] = [{ x = "Hi" }]
  │                               ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Int         | + String    |
    +---------------+-------------+
